--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
 
-    compileSdkVersion 27
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
 
     defaultConfig {
         applicationId "gun0912.tedbottompickerdemo"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0.0"
         multiDexEnabled true
