--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+android.useAndroidX=true
+android.enableJetifier=true
+
 GROUP=gun0912.ted
 VERSION_NAME=2.0.1
 
