--- a/tedbottompicker/build.gradle
+++ b/tedbottompicker/build.gradle
@@ -3,12 +3,13 @@ apply plugin: 'com.android.library'
 
 android {
 
-    compileSdkVersion 27
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
