--- a/tedbottompicker/build.gradle
+++ b/tedbottompicker/build.gradle
@@ -45,15 +45,15 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    api 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-annotations:27.1.1'
-    javadocDeps 'com.android.support:support-annotations:27.1.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    api 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'gun0912.ted:tedonactivityresult:1.0.6'
     implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    compileOnly 'androidx.legacy:legacy-support-v4:1.0.0'
 }
 
 apply from: rootProject.file('publish.gradle')
